<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_http"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string0" />

        <Button
            android:id="@+id/btn_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string8" />

        <Button
            android:id="@+id/btn_sdcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string11" />

        <Button
            android:id="@+id/btn_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string1" />

        <Button
            android:id="@+id/btn_brocast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string2" />

        <Button
            android:id="@+id/btn_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string3" />
        <Button
            android:id="@+id/btn_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="加载网页" />

    </LinearLayout>

</ScrollView>